# vimdicator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile.fedora  README.md  build.rs  io.github.polymeilex.vimdicator.json  meson.build  rustfmt.toml
.github/workflows/: check-dirty.sh  ci.yml  dnf-makecache.sh  dnf-prune.sh
data/: io.github.polymeilex.vimdicator.appdata.xml.in  io.github.polymeilex.vimdicator.desktop.in  io.github.polymeilex.vimdicator.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
runtime/plugin/: nvim_gui_shim.vim
src/: application.rs  cmd_line.rs  color.rs  config.rs  cursor.rs  dirs.rs  drawing_area.rs  error.rs  file_browser.rs  grid.rs  highlight.rs  input.rs  main.rs  meson.build  misc.rs  mode.rs  nvim_config.rs  nvim_viewport.rs  popup_menu.rs  project.rs  settings.rs  shell.rs  shell_dlg.rs  style.css  subscriptions.rs  tabline.rs  ui.rs  value.rs  vimdicator.gresource.xml  window.rs  window.ui
src/cmd_line/: mod.rs  viewport.rs
src/file_browser/: list_view.rs  mod.rs  tree_view.rs
src/file_browser/list_view/: list_item.rs
src/nvim/: api_info.rs  client.rs  event.rs  ext.rs  ext_line_grid.rs  ext_popup_menu.rs  ext_tabline.rs  handler.rs  mod.rs  redraw_handler.rs
src/plug_manager/: manager.rs  mod.rs  plugin_settings_dlg.rs  store.rs  ui.rs  vim_plug.rs  vimawesome.rs
src/popup_menu/: completion_model.rs  list_row.rs  mod.rs  popover.rs  popupmenu_model.rs
src/render/: context.rs  itemize.rs  mod.rs  model_clip_iterator.rs
src/sys/: mod.rs
src/ui_model/: item.rs  line.rs  mod.rs  model_layout.rs  model_rect.rs
src/widgets/: mod.rs  window.rs  window.ui
src/widgets/ext_line_grid/: mod.rs
src/widgets/ext_popup_menu/: ext_popup_menu.ui  mod.rs  model.rs  row.rs
src/widgets/ext_tab_line/: ext_tab_line.ui  mod.rs
src/window/: headerbar.rs  headerbar.ui  mod.rs  window.ui
tests/: cli_tests.rs
tests/cmd/: arg_parsing.trycmd
tests/cmd_unix/: unix_pipes.trycmd
