[package]
name = "nvim-gtk"
version = "1.0.1"
authors = [
    "daa84 <daa84@inbox.ru>",
    "Lyude Paul <thatslyude@gmail.com>",
]
build = "build.rs"
edition = "2018"
license = "GPLv3"

[dependencies]
clap = "2.0"
glib = "0.16.0"
gio = "0.16.0"
async-trait = "0.1.0"
futures = { version = "0.3.0", features = ["io-compat", "thread-pool"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["full"] }
nvim-rs = { version = "0.4.0", features = ["use_tokio"] }
phf = "0.11.0"
log = "0.4.0"
env_logger = "0.10.0"
htmlescape = "0.3.0"
rmpv = { version = "1.0", features = ["with-serde"] }
percent-encoding = "1.0"
regex = "1.0"
lazy_static = "1.0"
unicode-width = "0.1.0"
unicode-segmentation = "1.0"
fnv = "1.0"

serde = "1.0"
serde_derive = "1.0"
toml = "0.5.0"
serde_json = "1.0"

atty = "0.2.0"
dirs = "4.0"

[target.'cfg(unix)'.dependencies]
unix-daemonize = "0.1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.0"

[build-dependencies]
phf_codegen = "0.11.0"
build-version = "0.1.1"

[dependencies.pango]
features = ["v1_46"]
version = "0.16.0"

[dependencies.gtk]
package = "gtk4"
version = "0.5.0"
features = ["v4_4"]

[dependencies.gtk-sys]
package = "gtk4-sys"
version = "0.5.0"
features = ["v4_4"]

[dependencies.gdk]
package = "gdk4"
version = "0.5.0"
features = ["v4_4"]

[dependencies.gdk-sys]
package = "gdk4-sys"
version = "0.5.0"

[dependencies.gsk]
package = "gsk4"
version = "0.5.0"
features = ["v4_4"]

[dependencies.gsk-sys]
package = "gsk4-sys"
version = "0.5.0"
