[package]
name = "nvim-gtk"
version = "1.1.0-devel"
authors = [
    "daa84 <daa84@inbox.ru>",
    "Lyude Paul <thatslyude@gmail.com>",
]
build = "build.rs"
edition = "2018"
license = "GPLv3"

[dependencies]
clap = { version = "4.0", features = ["color", "help", "std", "usage", "error-context", "suggestions", "wrap_help", "derive"] }
glib = "0.17.0"
gio = "0.17.0"
async-trait = "0.1.0"
futures = { version = "0.3.0", features = ["io-compat", "thread-pool"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["full"] }
nvim-rs = { version = "0.5.0", features = ["use_tokio"] }
phf = "0.11.0"
log = "0.4.0"
env_logger = "0.10.0"
html-escape = "0.2.0"
rmpv = { version = "1.0", features = ["with-serde"] }
percent-encoding = "2.0"
regex = "1.0"
unicode-width = "0.1.0"
unicode-segmentation = "1.0"
fnv = "1.0"
once_cell = "1.0"

serde = { version = "1.0", features = ["derive"] }
toml = "0.5.0"
serde_json = "1.0"

is-terminal = "0.4.0"

[target.'cfg(unix)'.dependencies]
fork = "0.1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.0"

[build-dependencies]
phf_codegen = "0.11.0"
build-version = "0.1.0"

[dev-dependencies]
trycmd = "0.14.0"

[dependencies.pango]
features = ["v1_46"]
version = "0.17.0"

[dependencies.gtk]
package = "gtk4"
version = "0.6.0"
features = ["v4_4"]

[dependencies.gtk-sys]
package = "gtk4-sys"
version = "0.6.0"
features = ["v4_4"]

[dependencies.gdk]
package = "gdk4"
version = "0.6.0"
features = ["v4_4"]

[dependencies.gdk-sys]
package = "gdk4-sys"
version = "0.6.0"

[dependencies.gsk]
package = "gsk4"
version = "0.6.0"
features = ["v4_4"]

[dependencies.gsk-sys]
package = "gsk4-sys"
version = "0.6.0"
