[package]
name = "vimdicator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.71"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glib_logger = "0.1.0"
gtk = { version = "0.6", package = "gtk4" }
log = "0.4.19"
nvim-rs = { version = "0.5.0", features = ["use_tokio"] }
tokio = "1.29.1"
tokio-util = "0.7.8"

[dependencies.adw]
package = "libadwaita"
version = "0.4.4"
features = ["v1_2"]

[build-dependencies]
phf_codegen = "0.11.2"
